<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>
    <string name="common_submit">提交</string>
    <string name="common_please_wait">请稍候</string>
    <string name="common_setting">设置</string>
    <string name="common_logout">退出登录</string>
    <string name="common_logout_confirm">确定要退出登录吗</string>
    <string name="common_logout_success">退出登录成功</string>
    <string name="common_press_again_to_exit">再按一次退出程序</string>
    <string name="login_common_login">登 录</string>
    <string name="login_common_register">注册</string>
    <string name="login_common_switch">身份切换</string>
    <string name="login_common_forgot">忘记密码</string>
    <string name="login_common_rest">重置</string>
    <string name="login_common_bind">绑 定</string>
    <string name="login_common_next">下一步</string>
    <string name="login_common_send">发送验证码</string>
    <string name="login_common_username">用户名</string>
    <string name="login_common_phone">手机号</string>
    <string name="login_common_pwd">密码</string>
    <string name="login_other_login">其他登录方式</string>
    <string name="login_please_wait">正在登录…</string>
    <string name="login_hint_username">请输入用户名</string>
    <string name="login_hint_phone">请输入手机号</string>
    <string name="login_hint_pwd">请输入密码</string>
    <string name="login_hint_new_pwd">请输入新密码</string>
    <string name="login_hint_new_pwd_re">再次输入新密码</string>
    <string name="person_item_msg">消息通知</string>
    <string name="person_item_contact">通讯录</string>
    <string name="person_item_account">修改账号</string>
    <string name="person_item_pwd">修改密码</string>
    <string name="person_item_offline">离线模式</string>
    <string name="person_item_offline_data">离线数据</string>
    <string name="person_item_setting">设置</string>
    <string name="person_bind_account">账号绑定</string>
    <string name="person_binded">已绑定</string>
    <string name="person_unbind">未绑定</string>
    <string name="person_qq">Q Q</string>
    <string name="person_wechat">微信</string>
    <string name="person_weibo">微博</string>
    <string name="person_phone">手机</string>
    <string name="person_avatar">头像</string>
    <string name="person_name">姓名</string>
    <string name="person_gender">性别</string>
    <string name="person_hospital">所属医院</string>
    <string name="person_title">职称</string>
    <string name="person_fp_team">扶贫小队</string>
    <string name="person_fp_area">扶贫区域</string>
    <string name="person_team_fp">扶贫队伍</string>
    <string name="contacts_copy_phone">复制号码</string>
    <string name="contacts_copy_sms">短信</string>
    <string name="contacts_copy_call">打电话</string>
    <string name="message_click_view_detail">点击查看详情</string>
    <string name="message_news_attach">附件</string>
    <string name="person_setting_change_pwd">修改密码</string>
    <string name="person_title_change_password">修改密码</string>
    <string name="person_old_password">原密码</string>
    <string name="person_new_password">新密码</string>
    <string name="person_confirm_password">确认密码</string>
    <string name="person_hint_original_pwd">请输入原密码</string>
    <string name="person_hint_new_pwd">请输入新密码</string>
    <string name="person_hint_confirm_pwd">请再次输入新密码</string>
    <string name="setting_check_update">检查更新</string>
    <string name="setting_support">技术支持</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_share_app">分享APP</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_feedback_hint">请输入反馈内容</string>
    <string name="setting_feedback_empty_content">意见还没有填写</string>
    <string name="setting_feedback_over_limit">意见或建议不应超过200字</string>
    <string name="setting_feedback_committing">提交中...</string>
    <string name="setting_feedback_cancel">放弃提交？</string>
    <string name="setting_del_cache_confirm">确定要清除缓存吗</string>
    <string name="setting_del_cache_success">缓存清除成功</string>
    <string name="blood_unbind_egc">未绑定心电仪，点击绑定</string>
    <string name="blood_unbind_bc">未绑定B超仪，点击绑定</string>
    <string name="blood_wait_notice">已绑定居民，请开始检查</string>
    <string name="blood_wait_upload">报告已生成</string>
    <string name="blood_bind_info">点击绑定居民信息</string>
    <string name="blood_upload_sugar">测量完成后，点击上传血糖数据</string>
    <string name="blood_upload_pressure">测量完成后，点击上传血压数据</string>
    <string name="blood_unbind_pressure">未绑定血压仪，点击绑定</string>
    <string name="blood_unbind_sugar">未绑定血糖仪，点击绑定</string>
    <string name="blood_scanning_sugar">正在扫描血糖仪...</string>
    <string name="blood_scanning_pressure">正在扫描血压仪...</string>
    <string name="blood_connect_pressure">正在连接血压仪...</string>
    <string name="blood_connected">正在获取最新数据...</string>
    <string name="blood_connect_sugar">正在连接血糖仪...</string>
    <string name="blood_timeout">扫描超时，点击重新上传</string>
    <string name="blood_bind_success">绑定成功</string>
    <string name="blood_bind_failure">绑定失败，点击重试</string>
    <string name="scan_title">扫一扫</string>
    <string name="scan_text">将二维码放入框内,即可自动扫描</string>
    <string name="permission_refuse_tip">权限被拒绝，请在设置里面开启相应权限</string>
    <string name="type_sugar">血糖</string>
    <string name="type_pressure">血压</string>
    <string name="type_egc">心电</string>
    <string name="type_bc">B超</string>
    <string-array name="blood_sugar_times">
        <item>睡前</item>
        <item>早餐前</item>
        <item>早餐后</item>
        <item>午餐前</item>
        <item>午餐后</item>
        <item>晚餐前</item>
        <item>晚餐后</item>
        <item>凌晨</item>
        <item>随机</item>
    </string-array>
    <string name="village_title">居民（已签约）</string>
    <string name="followup_info_title">随访信息</string>
    <string name="record_create_unit">建档单位</string>
    <string name="statistics_title">统计</string>
    <string name="village_add_sign">新增签约</string>
    <string name="followup_title">重点人群随访</string>
    <string name="followup_tip">随访以重点人群为主体，居民必须贴上相应的标签才能对其进行随访工作</string>
    <string name="followup_newborn">新生儿随访</string>
    <string name="followup_child">儿童随访</string>
    <string name="followup_child1">儿童随访（1–8月）</string>
    <string name="followup_child2">儿童随访（12–30月）</string>
    <string name="followup_child3">儿童随访（3–6岁）</string>
    <string name="followup_medicine_child">儿童中医药随访</string>
    <string name="followup_child4">儿童中医药随访（6–18月）</string>
    <string name="followup_child5">儿童中医药随访（24–36月）</string>
    <string name="followup_old_medicine">老年人中医药随访</string>
    <string name="followup_old_self_care">老年人生活自理能力</string>
    <string name="followup_pregnant">孕妇随访</string>
    <string name="followup_perinatal_const">围产建卡</string>
    <string name="followup_gravida_first">第1次产前检查</string>
    <string name="followup_gravida_2">第2次产前随访</string>
    <string name="followup_gravida_3">第3次产前随访</string>
    <string name="followup_gravida_4">第4次产前随访</string>
    <string name="followup_gravida_5">第5次产前随访</string>
    <string name="followup_postpartum">产后访视</string>
    <string name="followup_postpartum_42">产后42天健康检查</string>
    <string name="followup_blood_sugar">2型糖尿病随访</string>
    <string name="followup_blood_pressure">高血压随访</string>
    <string name="followup_mental">精神障碍随访</string>
    <string name="followup_mental_supply">精神障碍个人信息补充表</string>
    <string name="followup_tuberculosis_first">肺结核第一次入户随访</string>
    <string name="followup_tuberculosis">肺结核随访</string>
    <string name="followup_tuberculosis_stop">肺结核停止治疗</string>
    <string name="followup_town_pick">随访区域</string>
    <string name="followup_villager_pick">居民选择</string>
    <string name="followup_upload">保存</string>
    <string name="followup_name">姓名</string>
    <string name="followup_number">编号</string>
    <string name="followup_visit_date">随访日期</string>
    <string name="followup_visit_type">随访方式</string>
    <string name="followup_base_info">基本信息</string>
    <string name="followup_date_picker">选择日期</string>
    <string name="followup_bs_symptom">症状</string>
    <string name="followup_bs_symptom_other">其他症状</string>
    <string name="followup_bs_body">体征</string>
    <string name="followup_bp_value">血压</string>
    <string name="followup_bs_sbp_value">收缩压（mmHg）</string>
    <string name="followup_bs_dbp_value">舒张压（mmHg）</string>
    <string name="followup_bs_weight">体重（kg）</string>
    <string name="followup_ms_guardian_name">监护人姓名</string>
    <string name="followup_ms_relationship">与患者关系</string>
    <string name="followup_ms_guardian_addr">监护人住址</string>
    <string name="followup_ms_guardian_phone">监护人电话</string>
    <string name="followup_ms_org_name">辖区村（居）委会联系人</string>
    <string name="followup_ms_org_phone">辖区村（居）委会电话</string>
    <string name="followup_ms_account_type">户 别</string>
    <string name="followup_ms_employment">就业情况</string>
    <string name="followup_ms_informed_consent">知情同意</string>
    <string name="followup_ms_informed_sign">患者签字</string>
    <string name="followup_ms_informed_date">签字日期</string>
    <string name="followup_ms_first_disease_time">初次发病时间</string>
    <string name="followup_ms_symptom">既往主要症状</string>
    <string name="followup_ms_symptom_other">其他症状</string>
    <string name="followup_ms_captivity">既往关锁情况</string>
    <string name="followup_ms_treatment">既往治疗情况</string>
    <string name="followup_ms_outpatient">门诊</string>
    <string name="followup_ms_outpatient_date">首次抗精神病药治疗时间</string>
    <string name="followup_ms_inpatient">住院</string>
    <string name="followup_ms_present_diagnosis">目前诊断情况</string>
    <string name="followup_ms_diagnosis">诊断</string>
    <string name="followup_ms_diagnosis_hos">诊断医院</string>
    <string name="followup_ms_diagnosis_date">诊断日期</string>
    <string name="followup_ms_last_treatment">最近一次治疗效果</string>
    <string name="followup_ms_danger_behavior">危险行为</string>
    <string name="followup_ms_danger_behavior_time">危险行为次数</string>
    <string name="followup_ms_financial">经济状况</string>
    <string name="followup_ms_doctor_advice">专科医生的意见</string>
    <string name="followup_ms_date">填表日期</string>
    <string name="followup_ms_doctor_name">医生签字</string>
    <string name="followup_t_stop_treatment">停止治疗及原因</string>
    <string name="followup_t_stop_reason">停止治疗原因</string>
    <string name="followup_t_stop_date">出现停止治疗时间</string>
    <string name="followup_t_management">全程管理情况</string>
    <string name="followup_t_management_should_visit">应访视患者</string>
    <string name="followup_t_management_real_visit">实际访视</string>
    <string name="followup_t_management_should_medicine">患者在疗程中，应服药</string>
    <string name="followup_t_management_real_medicine">实际服药</string>
    <string name="followup_t_management_rate">服药率</string>
    <string name="followup_t_management_doctor">评估医生签名：</string>
    <string name="followup_pn_pregnant">孕妇基本信息</string>
    <string name="followup_pn_perinatal">围产册号</string>
    <string name="followup_pn_perinatal_no">围产卡号</string>
    <string name="followup_pn_name">姓名</string>
    <string name="followup_pn_card_no">身份证号</string>
    <string name="followup_pn_age">年龄</string>
    <string name="followup_pn_nation">民族</string>
    <string name="followup_pn_education">文化程度</string>
    <string name="followup_pn_occupation">职业</string>
    <string name="followup_pn_phone">电话</string>
    <string name="followup_pn_household">户籍类型</string>
    <string name="followup_pn_pregnant_other">孕妇其他信息</string>
    <string name="followup_pn_marriage">是否近亲结婚</string>
    <string name="followup_pn_marriage_family">家庭近亲结婚</string>
    <string name="followup_pn_smoking">平时是否吸烟</string>
    <string name="followup_pn_smoking_husband">丈夫（未婚夫）是否吸烟</string>
    <string name="followup_pn_husband">丈夫基本信息</string>
    <string name="followup_pn_husband_name">姓名</string>
    <string name="followup_pn_husband_phone">电话</string>
    <string name="followup_pn_construct">建册基本信息</string>
    <string name="followup_pn_const_week">建册孕周</string>
    <string name="followup_pn_const_unit">建册单位</string>
    <string name="followup_pn_const_date">建册日期</string>
    <string name="followup_pn_constructor">建册人</string>
</resources>