<?xml version="1.0" encoding="utf-8"?>
<com.tianxiabuyi.txutils.widget.BounceScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg"
    android:orientation="vertical"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_16">

        <requestFocus />

        <TextView
            style="@style/follow_up_text"
            android:text="@string/followup_base_info" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_perinatal"
            style="@style/follow_up_sev"
            app:sevContentHintText="请输入围产册号"
            app:sevContentInputType="text"
            app:sevContentTextLength="25"
            app:sevLeftText="@string/followup_pn_perinatal" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_perinatal_no"
            style="@style/follow_up_sev"
            app:sevContentHintText="请输入围产卡号"
            app:sevContentInputType="text"
            app:sevContentTextLength="25"
            app:sevLeftText="@string/followup_pn_perinatal_no" />

        <TextView
            style="@style/follow_up_text"
            android:text="@string/followup_pn_pregnant" />

        <com.tianxiabuyi.txutils_ui.setting.SettingItemView
            android:id="@+id/siv_name"
            style="@style/follow_up_siv"
            app:sivContentHintText="请选择出姓名"
            app:sivLeftText="@string/followup_pn_name" />

        <LinearLayout
            android:id="@+id/ll_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <com.tianxiabuyi.txutils_ui.setting.SettingEditView
                android:id="@+id/sev_card_no"
                style="@style/follow_up_sev"
                app:sevContentEnable="false"
                app:sevContentHintText=""
                app:sevLeftText="@string/followup_pn_card_no" />

            <com.tianxiabuyi.txutils_ui.setting.SettingEditView
                android:id="@+id/sev_age"
                style="@style/follow_up_sev"
                app:sevContentEnable="false"
                app:sevContentHintText=""
                app:sevLeftText="@string/followup_pn_age" />

            <com.tianxiabuyi.txutils_ui.setting.SettingEditView
                android:id="@+id/sev_phone"
                style="@style/follow_up_sev"
                app:sevContentEnable="false"
                app:sevContentHintText=""
                app:sevLeftText="@string/followup_pn_phone" />

            <com.tianxiabuyi.txutils_ui.setting.SettingEditView
                android:id="@+id/sev_nation"
                style="@style/follow_up_sev"
                app:sevContentEnable="false"
                app:sevContentHintText=""
                app:sevLeftText="@string/followup_pn_nation" />

            <com.tianxiabuyi.txutils_ui.setting.SettingEditView
                android:id="@+id/sev_household"
                style="@style/follow_up_sev"
                app:sevContentEnable="false"
                app:sevContentHintText=""
                app:sevLeftText="@string/followup_pn_household" />

            <com.tianxiabuyi.txutils_ui.setting.SettingEditView
                android:id="@+id/sev_education"
                style="@style/follow_up_sev"
                app:sevContentEnable="false"
                app:sevContentHintText=""
                app:sevLeftText="@string/followup_pn_education" />

            <com.tianxiabuyi.txutils_ui.setting.SettingEditView
                android:id="@+id/sev_occupation"
                style="@style/follow_up_sev"
                app:sevContentEnable="false"
                app:sevContentHintText=""
                app:sevLeftText="@string/followup_pn_occupation" />
        </LinearLayout>

        <TextView
            style="@style/follow_up_text"
            android:text="@string/followup_pn_pregnant_other" />

        <com.tianxiabuyi.txutils_ui.setting.SettingItemView
            android:id="@+id/siv_marriage"
            style="@style/follow_up_siv"
            app:sivContentHintText="请选择是否近亲结婚"
            app:sivLeftText="@string/followup_pn_marriage" />

        <com.tianxiabuyi.txutils_ui.setting.SettingItemView
            android:id="@+id/siv_marriage_family"
            style="@style/follow_up_siv"
            app:sivContentHintText="请选择家庭近亲结婚"
            app:sivLeftText="@string/followup_pn_marriage_family" />

        <com.tianxiabuyi.txutils_ui.setting.SettingItemView
            android:id="@+id/siv_smoking"
            style="@style/follow_up_siv"
            app:sivContentHintText="请选择平时是否吸烟"
            app:sivLeftText="@string/followup_pn_smoking" />

        <com.tianxiabuyi.txutils_ui.setting.SettingItemView
            android:id="@+id/siv_smoking_husband"
            style="@style/follow_up_siv"
            app:sivContentHintText="请选择丈夫（未婚夫）是否吸烟"
            app:sivLeftText="@string/followup_pn_smoking_husband" />

        <TextView
            style="@style/follow_up_text"
            android:text="@string/followup_pn_husband" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_husband_name"
            style="@style/follow_up_sev"
            app:sevContentHintText="请输入姓名"
            app:sevContentTextLength="15"
            app:sevLeftText="@string/followup_pn_husband_name" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_husband_phone"
            style="@style/follow_up_sev"
            app:sevContentHintText="请输入电话"
            app:sevContentInputType="phone"
            app:sevContentTextLength="15"
            app:sevLeftText="@string/followup_pn_husband_phone" />

        <TextView
            style="@style/follow_up_text"
            android:text="@string/followup_pn_construct" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_const_week"
            style="@style/follow_up_sev"
            app:sevContentHintText="请输入建册孕周"
            app:sevContentInputType="number"
            app:sevContentTextLength="5"
            app:sevLeftText="@string/followup_pn_const_week" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_const_unit"
            style="@style/follow_up_sev"
            app:sevContentHintText="请输入建册单位"
            app:sevContentTextLength="30"
            app:sevLeftText="@string/followup_pn_const_unit" />

        <com.tianxiabuyi.txutils_ui.setting.SettingItemView
            android:id="@+id/siv_const_date"
            style="@style/follow_up_siv"
            app:sivContentHintText="请选择建册日期"
            app:sivLeftText="@string/followup_pn_const_date" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_constructor"
            style="@style/follow_up_sev"
            app:sevContentHintText="请输入建册人"
            app:sevContentTextLength="15"
            app:sevLeftText="@string/followup_pn_constructor" />
    </LinearLayout>
</com.tianxiabuyi.txutils.widget.BounceScrollView>