<?xml version="1.0" encoding="utf-8"?>
<com.tianxiabuyi.txutils.widget.BounceScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg"
    android:orientation="vertical"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_16">

        <requestFocus />

        <TextView
            style="@style/follow_up_text"
            android:text="@string/followup_base_info" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_name"
            style="@style/follow_up_sev"
            app:sevContentEnable="false"
            app:sevContentHintText="请输入姓名"
            app:sevContentTextLength="15"
            app:sevLeftText="@string/followup_name" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_number"
            style="@style/follow_up_sev"
            app:sevContentEnable="false"
            app:sevContentHintText="请输入编号"
            app:sevContentInputType="number"
            app:sevContentTextLength="25"
            app:sevLeftText="@string/followup_number" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_guardian"
            style="@style/follow_up_sev"
            app:sevContentHintText="请输入监护人姓名"
            app:sevContentTextLength="15"
            app:sevLeftText="@string/followup_ms_guardian_name" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_relationship"
            style="@style/follow_up_sev"
            app:sevContentHintText="请输入与患者关系"
            app:sevContentTextLength="15"
            app:sevLeftText="@string/followup_ms_relationship" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_guardian_phone"
            style="@style/follow_up_sev"
            app:sevContentHintText="请输入监护人住址"
            app:sevContentTextLength="30"
            app:sevLeftText="@string/followup_ms_guardian_addr" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_guardian_address"
            style="@style/follow_up_sev"
            app:sevContentHintText="请输入监护人电话"
            app:sevContentInputType="number"
            app:sevContentTextLength="15"
            app:sevLeftText="@string/followup_ms_guardian_phone" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_org_name"
            style="@style/follow_up_sev"
            app:sevContentHintText="请输入村居委会联系人"
            app:sevContentTextLength="15"
            app:sevLeftText="@string/followup_ms_org_name" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_org_phone"
            style="@style/follow_up_sev"
            app:sevContentHintText="请输入村居委会电话"
            app:sevContentInputType="phone"
            app:sevContentTextLength="15"
            app:sevLeftText="@string/followup_ms_org_phone" />

        <com.tianxiabuyi.txutils_ui.setting.SettingItemView
            android:id="@+id/siv_account_type"
            style="@style/follow_up_siv"
            app:sivContentHintText="请选择户别"
            app:sivLeftText="@string/followup_ms_account_type" />

        <com.tianxiabuyi.txutils_ui.setting.SettingItemView
            android:id="@+id/siv_employment"
            style="@style/follow_up_siv"
            app:sivContentHintText="请选择就业情况"
            app:sivLeftText="@string/followup_ms_employment" />

        <TextView
            style="@style/follow_up_text"
            android:text="@string/followup_ms_informed_consent" />

        <com.tianxiabuyi.txutils_ui.setting.SettingItemView
            android:id="@+id/siv_informed_consent"
            style="@style/follow_up_siv"
            app:sivContentHintText="请选择知情同意"
            app:sivLeftText="@string/followup_ms_informed_consent" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_informed_sign"
            style="@style/follow_up_sev"
            app:sevContentHintText="患者签字"
            app:sevContentTextLength="25"
            app:sevLeftText="@string/followup_ms_informed_sign" />

        <com.tianxiabuyi.txutils_ui.setting.SettingItemView
            android:id="@+id/siv_informed_time"
            style="@style/follow_up_siv"
            app:sivContentHintText="请选择签字时间"
            app:sivLeftText="@string/followup_ms_informed_date" />

        <TextView
            style="@style/follow_up_text"
            android:text="症状情况" />

        <com.tianxiabuyi.txutils_ui.setting.SettingItemView
            android:id="@+id/siv_first_disease_time"
            style="@style/follow_up_siv"
            app:sivContentHintText="请选择初次发病时间"
            app:sivLeftText="@string/followup_ms_first_disease_time" />

        <com.tianxiabuyi.txutils_ui.setting.SettingItemView
            android:id="@+id/siv_vital_symptom"
            style="@style/follow_up_siv"
            app:sivContentHintText="请选择既往主要症状"
            app:sivLeftText="@string/followup_ms_symptom" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_symptom_other"
            style="@style/follow_up_sev"
            app:sevBottomLineEnabled="true"
            app:sevContentHintText="请输入其他症状"
            app:sevContentTextLength="100"
            app:sevLeftText="@string/followup_ms_symptom_other" />

        <com.tianxiabuyi.txutils_ui.setting.SettingItemView
            android:id="@+id/siv_captivity"
            style="@style/follow_up_siv"
            app:sivContentHintText="请选择既往关锁情况"
            app:sivLeftText="@string/followup_ms_captivity" />

        <TextView
            style="@style/follow_up_text"
            android:text="@string/followup_ms_treatment" />

        <com.tianxiabuyi.txutils_ui.setting.SettingItemView
            android:id="@+id/siv_outpatient"
            style="@style/follow_up_siv"
            app:sivContentHintText="请选择门诊"
            app:sivLeftText="@string/followup_ms_outpatient" />

        <com.tianxiabuyi.txutils_ui.setting.SettingItemView
            android:id="@+id/siv_outpatient_date"
            style="@style/follow_up_siv"
            app:sivContentHintText="请选择治疗时间"
            app:sivLeftText="@string/followup_ms_outpatient_date" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_inpatient"
            style="@style/follow_up_sev"
            app:sevBottomLineEnabled="true"
            app:sevContentHintText="曾住精神专科医院\n/综合医院精神专科次数"
            app:sevContentInputType="number"
            app:sevContentTextLength="10"
            app:sevLeftText="@string/followup_ms_inpatient"
            app:sevRightText="次" />

        <TextView
            style="@style/follow_up_text"
            android:text="@string/followup_ms_present_diagnosis" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_diagnosis"
            style="@style/follow_up_sev"
            app:sevContentHintText="请输入诊断"
            app:sevContentTextLength="20"
            app:sevLeftText="@string/followup_ms_diagnosis" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_diagnosis_hos"
            style="@style/follow_up_sev"
            app:sevContentHintText="请输入确诊医院"
            app:sevContentTextLength="20"
            app:sevLeftText="@string/followup_ms_diagnosis_hos" />

        <com.tianxiabuyi.txutils_ui.setting.SettingItemView
            android:id="@+id/siv_diagnosis_date"
            style="@style/follow_up_siv"
            app:sivContentHintText="请选择确诊日期"
            app:sivLeftText="@string/followup_ms_diagnosis_date" />

        <com.tianxiabuyi.txutils_ui.setting.SettingItemView
            android:id="@+id/siv_last_treatment"
            style="@style/follow_up_siv"
            app:sivContentHintText="请选择最近一次治疗效果"
            app:sivLeftText="@string/followup_ms_last_treatment" />

        <TextView
            style="@style/follow_up_text"
            android:text="@string/followup_ms_danger_behavior" />

        <com.tianxiabuyi.txutils_ui.setting.SettingItemView
            android:id="@+id/siv_danger_behavior"
            style="@style/follow_up_siv"
            app:sivContentHintText="请选择危险行为"
            app:sivLeftText="@string/followup_ms_danger_behavior" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_danger_behavior_time"
            style="@style/follow_up_sev"
            android:visibility="gone"
            app:sevContentHintText="危险行为次数"
            app:sevContentTextLength="20"
            app:sevLeftText="@string/followup_ms_danger_behavior_time" />

        <TextView
            style="@style/follow_up_text"
            android:text="其他" />

        <com.tianxiabuyi.txutils_ui.setting.SettingItemView
            android:id="@+id/siv_financial"
            style="@style/follow_up_siv"
            app:sivContentHintText="请选择经济状况"
            app:sivLeftText="@string/followup_ms_financial" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_doctor_advice"
            style="@style/follow_up_sev"
            app:sevContentHintText="如果有请记录"
            app:sevContentTextLength="20"
            app:sevLeftText="@string/followup_ms_doctor_advice" />

        <com.tianxiabuyi.txutils_ui.setting.SettingItemView
            android:id="@+id/siv_form_date"
            style="@style/follow_up_siv"
            app:sivContentHintText="请选择填表日期"
            app:sivLeftText="@string/followup_ms_date" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_doctor_name"
            style="@style/follow_up_sev"
            app:sevBottomLineEnabled="true"
            app:sevContentHintText="医生签字"
            app:sevContentTextLength="10"
            app:sevLeftText="@string/followup_ms_doctor_name" />

    </LinearLayout>
</com.tianxiabuyi.txutils.widget.BounceScrollView>