<?xml version="1.0" encoding="utf-8"?>
<com.tianxiabuyi.txutils.widget.BounceScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_16">

        <requestFocus />

        <TextView
            style="@style/follow_up_text"
            android:text="@string/followup_base_info" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_name"
            style="@style/follow_up_sev"
            app:sevContentEnable="false"
            app:sevContentHintText="请输入姓名"
            app:sevContentTextLength="10"
            app:sevLeftText="@string/followup_name" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_number"
            style="@style/follow_up_sev"
            app:sevContentEnable="false"
            app:sevContentHintText="请输入编号"
            app:sevContentInputType="number"
            app:sevContentTextLength="25"
            app:sevLeftText="@string/followup_number" />

        <TextView
            style="@style/follow_up_text"
            android:text="@string/followup_t_stop_treatment" />

        <com.tianxiabuyi.txutils_ui.setting.SettingItemView
            android:id="@+id/siv_stop_date"
            style="@style/follow_up_siv"
            app:sivContentHintText="请选择出现停止治疗时间"
            app:sivLeftText="@string/followup_t_stop_date" />

        <com.tianxiabuyi.txutils_ui.setting.SettingItemView
            android:id="@+id/siv_stop_treatment"
            style="@style/follow_up_siv"
            app:sivContentHintText="请选择停止治疗原因"
            app:sivLeftText="@string/followup_t_stop_reason" />

        <TextView
            style="@style/follow_up_text"
            android:text="@string/followup_t_management" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_should_visit"
            style="@style/follow_up_sev"
            app:sevBottomLineEnabled="true"
            app:sevContentHintText="请输入应访视患者"
            app:sevContentInputType="numberDecimal"
            app:sevContentTextLength="10"
            app:sevLeftText="@string/followup_t_management_should_visit"
            app:sevRightText="次" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_real_visit"
            style="@style/follow_up_sev"
            app:sevBottomLineEnabled="true"
            app:sevContentHintText="请输入实际访视"
            app:sevContentInputType="numberDecimal"
            app:sevContentTextLength="10"
            app:sevLeftText="@string/followup_t_management_real_visit"
            app:sevRightText="次" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_should_medicine"
            style="@style/follow_up_sev"
            app:sevBottomLineEnabled="true"
            app:sevContentHintText="请输入疗程中应服药"
            app:sevContentInputType="numberDecimal"
            app:sevContentTextLength="10"
            app:sevLeftText="@string/followup_t_management_should_medicine"
            app:sevRightText="次" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_real_medicine"
            style="@style/follow_up_sev"
            app:sevBottomLineEnabled="true"
            app:sevContentHintText="请输入实际服药"
            app:sevContentInputType="numberDecimal"
            app:sevContentTextLength="10"
            app:sevLeftText="@string/followup_t_management_real_medicine"
            app:sevRightText="次" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_management_rate"
            style="@style/follow_up_sev"
            app:sevBottomLineEnabled="true"
            app:sevContentHintText="请输入服药率"
            app:sevContentInputType="numberDecimal"
            app:sevContentTextLength="10"
            app:sevLeftText="@string/followup_t_management_rate"
            app:sevRightText="%" />

        <com.tianxiabuyi.txutils_ui.setting.SettingEditView
            android:id="@+id/sev_management_doctor"
            style="@style/follow_up_sev"
            app:sevBottomLineEnabled="true"
            app:sevContentHintText="评估医生签名"
            app:sevContentTextLength="10"
            app:sevLeftText="@string/followup_t_management_doctor" />

    </LinearLayout>
</com.tianxiabuyi.txutils.widget.BounceScrollView>